Removed default full-bleed from slabs to fix overflow issues - let full bleed be used in wrapping component that adds default margin/padding to force a full-width child

--- a/app/assets/stylesheets/atoms/_base.scss
+++ b/app/assets/stylesheets/atoms/_base.scss
@@ -18,11 +18,7 @@ body {
 }
 
 .page-wrapper {
-  overflow: hidden;
-  padding-left: $s15;
-  padding-right: $s15;
-  @include media($tablet-up) {
-    padding-left: $s35;
-    padding-right: $s35;
-  }
+  // usually page wrapper is wrapping everything in the page
+  // higher level wrapping classes like template-dashboard may
+  // override it with specific styles, but here it should not do anything.
 }
